# crafts-ai

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_dir.md  TASK_7_IMPLEMENTATION_SUMMARY.md  conftest.py  pyproject.toml  setup.py
crafts_ai/: README.md  __init__.py
crafts_ai/ai/: README.md  integrations.py  newsletter.py
crafts_ai/chat/: README.md  __init__.py  client.py  rasa.py
crafts_ai/mcp/: README.md
crafts_ai/orchestrator/: README.md  compatibility.py  config.py  errors.py  executor.py  filter.py  interfaces.py  orchestrator.py  parser.py  pbt.py  scanner.py  test_csv_parser_roundtrip.py  test_parser_roundtrip.py
crafts_ai/seeder/: README.md  providers.py  simple_seeder.py
craftsai/: __init__.py
craftsai/ai/: __init__.py  integrations.py
craftsai/mcp/: __init__.py  server.py
craftsai/orchestrator/: __init__.py  cli.py  executor.py  filter.py  management.py  models.py  parser.py  pbt.py  tracker.py
craftsai/seeder/: __init__.py  providers.py  seeder.py
django_seed/: __init__.py  apps.py  guessers.py  logging_config.py  models.py  providers.py  seeder.py  settings_example.py  tasks.py  test_models.py
django_seed/management/commands/: invite_user.py  seed.py  send_invitations_from_csv.py  send_pending_invitations.py
django_seed/migrations/: 0001_initial.py  0002_rename_email_log_status_c8e8e5_idx_email_log_status_9e3e25_idx_and_more.py
django_seed/orchestrator/: __init__.py  config.py  errors.py  interfaces.py  orchestrator.py  pbt.py  progress.py
django_seed/services/: __init__.py  csv_parser.py  email_service.py  invitation_service.py  queue_manager.py  report_generator.py
django_seed/templates/emails/: invitation.html  invitation.txt
django_seed/tests/: __init__.py  test_management_commands.py  test_orchestration.py  test_queue_manager.py  test_services.py  test_tasks.py
docs/: README.md
nawaai/: __init__.py
nawaai/mcp/: __init__.py  server.py
nawaai/orchestrator/: compatibility.py  scanner.py
nawaai/seeder/: __init__.py  guessers.py  seeder.py
