[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-seed"
version = "1.1.0"
description = "Enhanced Django Seed with Spec Task Orchestrator and MCP Designer (merged with upstream)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Wagtail",
]
dependencies = [
    "Django>=1.11",
    "Faker>=0.7.7",
    "toposort>=1.5",
    "hypothesis>=6.0",
    "pytest>=7.0",
]

[project.scripts]
django-seed = "django_seed.cli:main"
mcp-django-server = "django_seed.mcp_designer.mcp_server:main"
orchestrator = "django_seed.orchestrator.cli:main"

[project.urls]
"Homepage" = "https://github.com/mammhoud/django-seed"
"Repository" = "https://github.com/mammhoud/django-seed"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_seed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=django_seed"

[tool.coverage.run]
source = ["src/django_seed"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
