[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "craftsai"
version = "0.1.0"
description = "Standalone AI/MCP toolkit — no Django required"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Faker>=0.7.7",
    "toposort>=1.5",
    "hypothesis>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.3"]
mcp = ["mcp"]
dev = ["pytest>=7.0", "hypothesis>=6.0"]

[project.scripts]
craftsai = "craftsai.orchestrator.cli:main"

[project.urls]
"Homepage" = "https://github.com/mammhoud/django-seed"
"Repository" = "https://github.com/mammhoud/django-seed"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["craftsai*", "django_seed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["craftsai"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
