[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nawaai"
version = "0.2.0"
description = "Standalone AI/MCP toolkit — no Django required"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "hypothesis>=6.151.6",
]

[project.optional-dependencies]
faker = ["Faker>=0.7.7"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.3"]
mcp = ["mcp"]
rasa = ["requests>=2.28"]
rseal = ["django-rseal"]
dev = ["pytest>=7.0", "hypothesis>=6.151.6", "Faker>=0.7.7"]

[project.scripts]
craftsai = "crafts_ai.orchestrator.cli:main"

[project.urls]
"Homepage" = "https://github.com/mammhoud/crafts-ai"
"Repository" = "https://github.com/mammhoud/crafts-ai"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["crafts_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["craftsai"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
